Fix: spacing of elements on screen resize

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -117,4 +117,7 @@ div#content {
   #rackSelectButton{
     margin-top: 160px;
   }
+  #spacing{
+    margin-top: 160px;
+  }
 }
